--- a/main-dark/css/style.css
+++ b/main-dark/css/style.css
@@ -790,10 +790,10 @@ hr {
   border: 1px solid #d5dfea !important; }
 
 .border-primary {
-  border-color: #6993ff !important; }
+  border-color: #0096FF !important; }
 
 .border-success {
-  border-color: #1bc5bd !important; }
+  border-color: #7CFC00 !important; }
 
 .border-info {
   border-color: #8950fc !important; }
