--- a/main-dark/Digital_Performance.css
+++ b/main-dark/Digital_Performance.css
@@ -41,6 +41,12 @@ body {
     font-size: 34px;
 }
 
+.icon-img {
+    width: 40px; /* Adjust the width as needed */
+    height: auto; /* Maintain aspect ratio */
+    margin-bottom: 10px; /* Add some space below the icon */
+  }
+
 /* Card Styles */
 .card {
     background-color: #1e2746;
