--- a/main-darkback/Digital_Performance.css
+++ b/main-darkback/Digital_Performance.css
@@ -4,6 +4,39 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.header {
+    background-color: #1e2746;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header img {
+    height: 50px;
+}
+
+.header .title {
+    font-size: 24px;
+}
+
+.contact-center-text {
+    font-weight: bold;
+    font-size: 20px; /* Increase font size */
+    margin-left: -100px;
+}
+
+
+.header .date-time {
+    text-align: right;
+}
+
+.date-time-text {
+    font-size: 22px; /* Ukuran teks lebih besar */
+    margin: 10px 0; /* Margin atas dan bawah sama */
+    color: goldenrod; /* Warna sesuai dengan style yang sudah ada */
+}
+
 /* Section Title Styles */
 .section-title {
     background-repeat: no-repeat;
